--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
 
     </android.support.v4.widget.DrawerLayout>
 
-    <android.support.v4.view.ViewPager
+    <com.codecrew.mememate.ui.main.CustomViewPager
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
