--- a/app/src/main/res/layout/item_top.xml
+++ b/app/src/main/res/layout/item_top.xml
@@ -1,19 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/tvIndex"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1."
-        android:textColor="@color/colorTextAlter"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        tools:text="1." />
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -27,44 +18,70 @@
             android:adjustViewBounds="true"
             />
 
-        <LinearLayout
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:background="@drawable/gradation_black"
-            android:orientation="vertical"
             android:padding="16dp">
+
+            <TextView
+                android:id="@+id/tvIndex"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="1."
+                android:textColor="@color/ghostwhite"
+                android:textSize="26sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:text="1." />
 
             <TextView
                 android:id="@+id/item_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp"
                 android:text="ELO 3 2 0"
-                android:textColor="@android:color/white"
+                android:textColor="@color/ghostwhite"
                 android:textSize="26sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/tvIndex" />
+
+            <!--<TextView-->
+            <!--android:id="@+id/item_city"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="TEST"-->
+            <!--android:textColor="@android:color/white"-->
+            <!--android:textSize="20sp"-->
+            <!--android:textStyle="bold" />-->
 
             <TextView
-                android:id="@+id/item_city"
+                android:id="@+id/tvRate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TEST"
-                android:textColor="@android:color/white"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="1, 500"
+                android:textAlignment="center"
+                android:textColor="@android:color/holo_green_light"
+                android:textSize="28sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
 
-        </LinearLayout>
+        </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 
-    <TextView
-        android:id="@+id/tvRate"
+    <View
+        android:id="@+id/divider5"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:text="1, 500"
-        android:textAlignment="center"
-        android:textColor="@android:color/holo_green_light"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:layout_height="3dp"
+        android:background="@color/peachpuff" />
 
 </LinearLayout>
