--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,12 +8,12 @@
 
     <!--<item-->
             <!--android:id="@+id/navigation_matches"-->
-            <!--android:icon="@drawable/ic_matches"-->
+            <!--android:icon="@drawable/ic_friends"-->
             <!--android:title="@string/matches"/>-->
 
     <item
-        android:id="@+id/navigation_matches"
-        android:icon="@drawable/ic_matches"
+        android:id="@+id/navigation_friends"
+        android:icon="@drawable/ic_friends"
         android:title="@string/friends"/>
 
     <item
