--- a/app/src/main/res/layout/fragment_browse.xml
+++ b/app/src/main/res/layout/fragment_browse.xml
@@ -3,8 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/no_more_memes"
     android:clipChildren="false">
+
+    <ImageView
+        android:id="@+id/no_more_memes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/card_stack_view"
+        android:layout_alignBottom="@+id/card_stack_view"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="-88dp"
+        app:srcCompat="@drawable/no_more_memes"
+        android:contentDescription="@string/you_swiped_through_all_existing_memes" />
 
     <RelativeLayout
         android:id="@+id/button_container"
@@ -84,5 +98,8 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/button_container"
         android:clipToPadding="false"
-        android:padding="4dp" />
+        android:padding="4dp" >
+
+    </com.yuyakaido.android.cardstackview.CardStackView>
+
 </RelativeLayout>
