--- a/app/src/main/res/layout/fragment_meme_adding.xml
+++ b/app/src/main/res/layout/fragment_meme_adding.xml
@@ -12,16 +12,17 @@
         android:id="@+id/memeImage"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="64dp"
         android:src="@drawable/default_meme_add"
         app:layout_constraintBottom_toTopOf="@+id/name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="invisible" />
+        tools:visibility="invisible"
+        android:contentDescription="@string/post_a_new_meme" />
 
     <EditText
         android:id="@+id/name"
@@ -32,12 +33,14 @@
         android:layout_weight="0.7"
         android:background="@drawable/edit_text_round"
         android:ems="10"
-        android:hint="title"
+        android:hint="@string/title"
         android:inputType="textPersonName"
-        android:paddingLeft="8dp"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline6" />
+        app:layout_constraintTop_toTopOf="@+id/guideline6"
+        android:autofillHints="Sad Pepe redemption" />
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="0dp"
@@ -62,7 +65,7 @@
             android:layout_marginBottom="8dp"
             android:layout_weight="0.5"
             android:background="@drawable/button_round"
-            android:text="Pick Meme"
+            android:text="@string/pick_meme"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline3"
@@ -78,7 +81,7 @@
             android:layout_marginBottom="8dp"
             android:layout_weight="0.5"
             android:background="@drawable/button_round"
-            android:text="Upload"
+            android:text="@string/upload"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
