--- a/app/src/main/res/layout/fragment_screen_slide_page.xml
+++ b/app/src/main/res/layout/fragment_screen_slide_page.xml
@@ -8,6 +8,5 @@
         android:padding="16dp"
         android:lineSpacingMultiplier="1.2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Hejka" />
+        android:layout_height="wrap_content" />
 </ScrollView>
