--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -22,14 +22,16 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:scaleType="centerCrop"
-            app:srcCompat="@mipmap/ic_launcher_round" />
+            app:srcCompat="@mipmap/ic_launcher_round"
+            android:contentDescription="@string/mememate_logo" />
 
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="170dp"
             android:layout_height="33dp"
             android:layout_marginTop="5dp"
-            app:srcCompat="@drawable/logo" />
+            app:srcCompat="@drawable/logo"
+            android:contentDescription="@string/mememate_logo_text" />
 
     </LinearLayout>
 
@@ -55,6 +57,7 @@
             android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:tag="false" />
 
         <EditText
@@ -70,6 +73,7 @@
             android:hint="@string/username"
             android:inputType="textPersonName"
             android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:tag="false" />
 
         <EditText
@@ -85,6 +89,7 @@
             android:hint="@string/password"
             android:inputType="textPassword"
             android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:tag="false" />
 
         <EditText
@@ -100,6 +105,7 @@
             android:hint="@string/confirm_password"
             android:inputType="textPassword"
             android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:tag="false" />
 
         <TextView
