--- a/app/src/main/res/layout/item_friends.xml
+++ b/app/src/main/res/layout/item_friends.xml
@@ -28,21 +28,21 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tvNew"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="50dp"
-            android:background="@drawable/text_view_round"
-            android:paddingHorizontal="14dp"
-            android:paddingVertical="7dp"
-            android:text="3"
-            android:textColor="@color/papayawhip"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        <!--<TextView-->
+            <!--android:id="@+id/tvNew"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginEnd="50dp"-->
+            <!--android:background="@drawable/text_view_round"-->
+            <!--android:paddingHorizontal="14dp"-->
+            <!--android:paddingVertical="7dp"-->
+            <!--android:text="3"-->
+            <!--android:textColor="@color/papayawhip"-->
+            <!--android:textSize="18sp"-->
+            <!--android:textStyle="bold"-->
+            <!--app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--app:layout_constraintEnd_toEndOf="parent"-->
+            <!--app:layout_constraintTop_toTopOf="parent" />-->
     </android.support.constraint.ConstraintLayout>
 
 </LinearLayout>
