--- a/app/src/main/res/drawable/gradation_black.xml
+++ b/app/src/main/res/drawable/gradation_black.xml
@@ -3,14 +3,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:startColor="@android:color/transparent"
-        android:endColor="#88000000"
         android:angle="270"
-        />
+        android:endColor="#88000000"
+        android:startColor="@android:color/transparent" />
 
     <corners
         android:bottomLeftRadius="8dp"
-        android:bottomRightRadius="8dp"
-        />
+        android:bottomRightRadius="8dp" />
 
 </shape>
