--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -21,17 +21,17 @@
             android:id="@+id/imageView"
             android:layout_width="150dp"
             android:layout_height="150dp"
+            android:contentDescription="@string/mememate_logo"
             android:scaleType="centerCrop"
-            app:srcCompat="@mipmap/ic_launcher_round"
-            android:contentDescription="@string/mememate_logo" />
+            app:srcCompat="@mipmap/ic_launcher_round" />
 
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="170dp"
             android:layout_height="33dp"
             android:layout_marginTop="5dp"
-            app:srcCompat="@drawable/logo"
-            android:contentDescription="@string/mememate_logo_text" />
+            android:contentDescription="@string/mememate_logo_text"
+            app:srcCompat="@drawable/logo" />
 
     </LinearLayout>
 
