--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -11,9 +11,10 @@
         android:id="@+id/textView6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawableStart="@drawable/ic_settings_black_40dp"
         android:drawablePadding="8dp"
         android:padding="12dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
         android:text="@string/settings"
         android:textColor="@color/colorTextAlter"
         android:textSize="40sp"
@@ -34,6 +35,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            <Button
+                android:id="@+id/username_change_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/papayawhip"
+                android:drawableStart="@drawable/ic_person_24dp"
+                android:drawablePadding="10dp"
+                android:onClick="logout"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
+                android:text="@string/change_your_username"
+                android:textAlignment="viewStart"
+                android:textSize="15sp" />
+
+            <View
+                android:id="@+id/divider4"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/peachpuff" />
 
             <Button
                 android:id="@+id/email_change_button"
@@ -108,6 +129,13 @@
                 android:text="@string/log_out"
                 android:textAlignment="viewStart"
                 android:textSize="15sp" />
+
+            <View
+                android:id="@+id/divider5"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/peachpuff" />
+
 
         </LinearLayout>
     </ScrollView>
