--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="white">#FFFF</color>
     <color name="peachpuff">#FFD8BE</color>
     <color name="papayawhip">#FFEEDD</color>
+    <color name="papayawhipD">#FFE6CC</color>
     <color name="ghostwhite">#FFEDED</color>
     <color name="periwinkle">#B8B8FF</color>
     <color name="mediumslate">#8C77FF</color>
