--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -85,22 +85,32 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:visibility="gone">
+            android:visibility="visible">
 
-            <EditText
-                android:id="@+id/etSearch"
+            <SearchView
+                android:id="@+id/searchView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="15dp"
                 android:background="@drawable/edit_text_round"
-                android:drawableStart="@drawable/ic_search_gray_24dp"
-                android:drawablePadding="5dp"
-                android:ems="10"
-                android:hint="@string/search"
-                android:inputType="textPersonName"
-                android:padding="10dp" />
+                android:queryBackground="@android:color/transparent"/>
+
+            <!--<EditText-->
+                <!--android:id="@+id/etSearch"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginHorizontal="10dp"-->
+                <!--android:layout_marginTop="10dp"-->
+                <!--android:layout_marginBottom="20dp"-->
+                <!--android:background="@drawable/edit_text_round"-->
+                <!--android:drawableStart="@drawable/ic_search_gray_24dp"-->
+                <!--android:drawablePadding="5dp"-->
+                <!--android:ems="10"-->
+                <!--android:hint="@string/search"-->
+                <!--android:inputType="textPersonName"-->
+                <!--android:padding="10dp" />-->
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerViewFriends"
@@ -113,7 +123,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:visibility="visible">
+            android:visibility="gone">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerViewFeed"
