--- a/app/src/main/res/layout/fragment_profile_user.xml
+++ b/app/src/main/res/layout/fragment_profile_user.xml
@@ -114,6 +114,7 @@
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@color/papayawhip"
                 tools:listitem="@android:layout/simple_list_item_multiple_choice" />
         </android.support.v7.widget.CardView>
     </LinearLayout>
